parser/src/sedml-script.output
Terminals unused in grammar

   "mathematical symbol"


Grammar

    0 $accept: input "end of file"

    1 input: %empty
    2      | input equals lineend
    3      | input block
    4      | input name lineend
    5      | input lineend
    6      | input error
    7      | input "an error"

    8 varOrKeyword: "element name"
    9             | varOrKeyword '.' "element name"

   10 equals: varOrKeyword '=' formula

   11 $@1: %empty

   12 block: varOrKeyword formula ':' lineend "an indentation increase" $@1 input "an indentation decrease"

   13 numlist: %empty
   14        | number
   15        | numlist ',' number

   16 name: varOrKeyword varOrKeyword "text string in quotes"

   17 number: "number"
   18       | '-' "number"

   19 formula: varOrKeyword
   20        | "number"
   21        | '(' formula ')'
   22        | '-'
   23        | '!'
   24        | formula varOrKeyword
   25        | formula "number"
   26        | formula '(' ')'
   27        | formula '(' commaformula ')'
   28        | formula mathThing
   29        | formula '&' '&'
   30        | formula "=="
   31        | formula '|' '|'
   32        | formula '[' numlist ']'

   33 commaformula: formula
   34             | commaformula ',' formula

   35 mathThing: '+'
   36          | '-'
   37          | '*'
   38          | '/'
   39          | '^'
   40          | '>'
   41          | '<'
   42          | '!'
   43          | '%'

   44 lineend: '\n'


Terminals, with rules where they appear

"end of file" (0) 0
'\n' (10) 44
'!' (33) 23 42
'%' (37) 43
'&' (38) 29
'(' (40) 21 26 27
')' (41) 21 26 27
'*' (42) 37
'+' (43) 35
',' (44) 15 34
'-' (45) 18 22 36
'.' (46) 9
'/' (47) 38
':' (58) 12
'<' (60) 41
'=' (61) 10
'>' (62) 40
'[' (91) 32
']' (93) 32
'^' (94) 39
'|' (124) 31
error (256) 6
"mathematical symbol" (258)
"number" (259) 17 18 20 25
"element name" (260) 8 9
"text string in quotes" (261) 16
"an error" (262) 7
"an indentation increase" (263) 12
"an indentation decrease" (264) 12
"==" (265) 30


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
input (32)
    on left: 1 2 3 4 5 6 7, on right: 0 2 3 4 5 6 7 12
varOrKeyword (33)
    on left: 8 9, on right: 9 10 12 16 19 24
equals (34)
    on left: 10, on right: 2
block (35)
    on left: 12, on right: 3
$@1 (36)
    on left: 11, on right: 12
numlist (37)
    on left: 13 14 15, on right: 15 32
name (38)
    on left: 16, on right: 4
number (39)
    on left: 17 18, on right: 14 15
formula (40)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32, on right: 10
    12 21 24 25 26 27 28 29 30 31 32 33 34
commaformula (41)
    on left: 33 34, on right: 27 34
mathThing (42)
    on left: 35 36 37 38 39 40 41 42 43, on right: 28
lineend (43)
    on left: 44, on right: 2 4 5 12


State 0

    0 $accept: . input "end of file"

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . "end of file"
    2 input: input . equals lineend
    3      | input . block
    4      | input . name lineend
    5      | input . lineend
    6      | input . error
    7      | input . "an error"

    "end of file"   shift, and go to state 2
    error           shift, and go to state 3
    "element name"  shift, and go to state 4
    "an error"      shift, and go to state 5
    '\n'            shift, and go to state 6

    varOrKeyword  go to state 7
    equals        go to state 8
    block         go to state 9
    name          go to state 10
    lineend       go to state 11


State 2

    0 $accept: input "end of file" .

    $default  accept


State 3

    6 input: input error .

    $default  reduce using rule 6 (input)


State 4

    8 varOrKeyword: "element name" .

    $default  reduce using rule 8 (varOrKeyword)


State 5

    7 input: input "an error" .

    $default  reduce using rule 7 (input)


State 6

   44 lineend: '\n' .

    $default  reduce using rule 44 (lineend)


State 7

    9 varOrKeyword: varOrKeyword . '.' "element name"
   10 equals: varOrKeyword . '=' formula
   12 block: varOrKeyword . formula ':' lineend "an indentation increase" $@1 input "an indentation decrease"
   16 name: varOrKeyword . varOrKeyword "text string in quotes"

    '-'             shift, and go to state 12
    "number"        shift, and go to state 13
    "element name"  shift, and go to state 4
    '.'             shift, and go to state 14
    '='             shift, and go to state 15
    '('             shift, and go to state 16
    '!'             shift, and go to state 17

    varOrKeyword  go to state 18
    formula       go to state 19


State 8

    2 input: input equals . lineend

    '\n'  shift, and go to state 6

    lineend  go to state 20


State 9

    3 input: input block .

    $default  reduce using rule 3 (input)


State 10

    4 input: input name . lineend

    '\n'  shift, and go to state 6

    lineend  go to state 21


State 11

    5 input: input lineend .

    $default  reduce using rule 5 (input)


State 12

   22 formula: '-' .

    $default  reduce using rule 22 (formula)


State 13

   20 formula: "number" .

    $default  reduce using rule 20 (formula)


State 14

    9 varOrKeyword: varOrKeyword '.' . "element name"

    "element name"  shift, and go to state 22


State 15

   10 equals: varOrKeyword '=' . formula

    '-'             shift, and go to state 12
    "number"        shift, and go to state 13
    "element name"  shift, and go to state 4
    '('             shift, and go to state 16
    '!'             shift, and go to state 17

    varOrKeyword  go to state 23
    formula       go to state 24


State 16

   21 formula: '(' . formula ')'

    '-'             shift, and go to state 12
    "number"        shift, and go to state 13
    "element name"  shift, and go to state 4
    '('             shift, and go to state 16
    '!'             shift, and go to state 17

    varOrKeyword  go to state 23
    formula       go to state 25


State 17

   23 formula: '!' .

    $default  reduce using rule 23 (formula)


State 18

    9 varOrKeyword: varOrKeyword . '.' "element name"
   16 name: varOrKeyword varOrKeyword . "text string in quotes"
   19 formula: varOrKeyword .

    "text string in quotes"  shift, and go to state 26
    '.'                      shift, and go to state 14

    $default  reduce using rule 19 (formula)


State 19

   12 block: varOrKeyword formula . ':' lineend "an indentation increase" $@1 input "an indentation decrease"
   24 formula: formula . varOrKeyword
   25        | formula . "number"
   26        | formula . '(' ')'
   27        | formula . '(' commaformula ')'
   28        | formula . mathThing
   29        | formula . '&' '&'
   30        | formula . "=="
   31        | formula . '|' '|'
   32        | formula . '[' numlist ']'

    '&'             shift, and go to state 27
    '|'             shift, and go to state 28
    '-'             shift, and go to state 29
    '+'             shift, and go to state 30
    '*'             shift, and go to state 31
    '/'             shift, and go to state 32
    '%'             shift, and go to state 33
    '^'             shift, and go to state 34
    "number"        shift, and go to state 35
    "element name"  shift, and go to state 4
    "=="            shift, and go to state 36
    ':'             shift, and go to state 37
    '('             shift, and go to state 38
    '!'             shift, and go to state 39
    '['             shift, and go to state 40
    '>'             shift, and go to state 41
    '<'             shift, and go to state 42

    varOrKeyword  go to state 43
    mathThing     go to state 44


State 20

    2 input: input equals lineend .

    $default  reduce using rule 2 (input)


State 21

    4 input: input name lineend .

    $default  reduce using rule 4 (input)


State 22

    9 varOrKeyword: varOrKeyword '.' "element name" .

    $default  reduce using rule 9 (varOrKeyword)


State 23

    9 varOrKeyword: varOrKeyword . '.' "element name"
   19 formula: varOrKeyword .

    '.'  shift, and go to state 14

    $default  reduce using rule 19 (formula)


State 24

   10 equals: varOrKeyword '=' formula .
   24 formula: formula . varOrKeyword
   25        | formula . "number"
   26        | formula . '(' ')'
   27        | formula . '(' commaformula ')'
   28        | formula . mathThing
   29        | formula . '&' '&'
   30        | formula . "=="
   31        | formula . '|' '|'
   32        | formula . '[' numlist ']'

    '&'             shift, and go to state 27
    '|'             shift, and go to state 28
    '-'             shift, and go to state 29
    '+'             shift, and go to state 30
    '*'             shift, and go to state 31
    '/'             shift, and go to state 32
    '%'             shift, and go to state 33
    '^'             shift, and go to state 34
    "number"        shift, and go to state 35
    "element name"  shift, and go to state 4
    "=="            shift, and go to state 36
    '('             shift, and go to state 38
    '!'             shift, and go to state 39
    '['             shift, and go to state 40
    '>'             shift, and go to state 41
    '<'             shift, and go to state 42

    $default  reduce using rule 10 (equals)

    varOrKeyword  go to state 43
    mathThing     go to state 44


State 25

   21 formula: '(' formula . ')'
   24        | formula . varOrKeyword
   25        | formula . "number"
   26        | formula . '(' ')'
   27        | formula . '(' commaformula ')'
   28        | formula . mathThing
   29        | formula . '&' '&'
   30        | formula . "=="
   31        | formula . '|' '|'
   32        | formula . '[' numlist ']'

    '&'             shift, and go to state 27
    '|'             shift, and go to state 28
    '-'             shift, and go to state 29
    '+'             shift, and go to state 30
    '*'             shift, and go to state 31
    '/'             shift, and go to state 32
    '%'             shift, and go to state 33
    '^'             shift, and go to state 34
    "number"        shift, and go to state 35
    "element name"  shift, and go to state 4
    "=="            shift, and go to state 36
    '('             shift, and go to state 38
    ')'             shift, and go to state 45
    '!'             shift, and go to state 39
    '['             shift, and go to state 40
    '>'             shift, and go to state 41
    '<'             shift, and go to state 42

    varOrKeyword  go to state 43
    mathThing     go to state 44


State 26

   16 name: varOrKeyword varOrKeyword "text string in quotes" .

    $default  reduce using rule 16 (name)


State 27

   29 formula: formula '&' . '&'

    '&'  shift, and go to state 46


State 28

   31 formula: formula '|' . '|'

    '|'  shift, and go to state 47


State 29

   36 mathThing: '-' .

    $default  reduce using rule 36 (mathThing)


State 30

   35 mathThing: '+' .

    $default  reduce using rule 35 (mathThing)


State 31

   37 mathThing: '*' .

    $default  reduce using rule 37 (mathThing)


State 32

   38 mathThing: '/' .

    $default  reduce using rule 38 (mathThing)


State 33

   43 mathThing: '%' .

    $default  reduce using rule 43 (mathThing)


State 34

   39 mathThing: '^' .

    $default  reduce using rule 39 (mathThing)


State 35

   25 formula: formula "number" .

    $default  reduce using rule 25 (formula)


State 36

   30 formula: formula "==" .

    $default  reduce using rule 30 (formula)


State 37

   12 block: varOrKeyword formula ':' . lineend "an indentation increase" $@1 input "an indentation decrease"

    '\n'  shift, and go to state 6

    lineend  go to state 48


State 38

   26 formula: formula '(' . ')'
   27        | formula '(' . commaformula ')'

    '-'             shift, and go to state 12
    "number"        shift, and go to state 13
    "element name"  shift, and go to state 4
    '('             shift, and go to state 16
    ')'             shift, and go to state 49
    '!'             shift, and go to state 17

    varOrKeyword  go to state 23
    formula       go to state 50
    commaformula  go to state 51


State 39

   42 mathThing: '!' .

    $default  reduce using rule 42 (mathThing)


State 40

   32 formula: formula '[' . numlist ']'

    '-'       shift, and go to state 52
    "number"  shift, and go to state 53

    $default  reduce using rule 13 (numlist)

    numlist  go to state 54
    number   go to state 55


State 41

   40 mathThing: '>' .

    $default  reduce using rule 40 (mathThing)


State 42

   41 mathThing: '<' .

    $default  reduce using rule 41 (mathThing)


State 43

    9 varOrKeyword: varOrKeyword . '.' "element name"
   24 formula: formula varOrKeyword .

    '.'  shift, and go to state 14

    $default  reduce using rule 24 (formula)


State 44

   28 formula: formula mathThing .

    $default  reduce using rule 28 (formula)


State 45

   21 formula: '(' formula ')' .

    $default  reduce using rule 21 (formula)


State 46

   29 formula: formula '&' '&' .

    $default  reduce using rule 29 (formula)


State 47

   31 formula: formula '|' '|' .

    $default  reduce using rule 31 (formula)


State 48

   12 block: varOrKeyword formula ':' lineend . "an indentation increase" $@1 input "an indentation decrease"

    "an indentation increase"  shift, and go to state 56


State 49

   26 formula: formula '(' ')' .

    $default  reduce using rule 26 (formula)


State 50

   24 formula: formula . varOrKeyword
   25        | formula . "number"
   26        | formula . '(' ')'
   27        | formula . '(' commaformula ')'
   28        | formula . mathThing
   29        | formula . '&' '&'
   30        | formula . "=="
   31        | formula . '|' '|'
   32        | formula . '[' numlist ']'
   33 commaformula: formula .

    '&'             shift, and go to state 27
    '|'             shift, and go to state 28
    '-'             shift, and go to state 29
    '+'             shift, and go to state 30
    '*'             shift, and go to state 31
    '/'             shift, and go to state 32
    '%'             shift, and go to state 33
    '^'             shift, and go to state 34
    "number"        shift, and go to state 35
    "element name"  shift, and go to state 4
    "=="            shift, and go to state 36
    '('             shift, and go to state 38
    '!'             shift, and go to state 39
    '['             shift, and go to state 40
    '>'             shift, and go to state 41
    '<'             shift, and go to state 42

    $default  reduce using rule 33 (commaformula)

    varOrKeyword  go to state 43
    mathThing     go to state 44


State 51

   27 formula: formula '(' commaformula . ')'
   34 commaformula: commaformula . ',' formula

    ','  shift, and go to state 57
    ')'  shift, and go to state 58


State 52

   18 number: '-' . "number"

    "number"  shift, and go to state 59


State 53

   17 number: "number" .

    $default  reduce using rule 17 (number)


State 54

   15 numlist: numlist . ',' number
   32 formula: formula '[' numlist . ']'

    ','  shift, and go to state 60
    ']'  shift, and go to state 61


State 55

   14 numlist: number .

    $default  reduce using rule 14 (numlist)


State 56

   12 block: varOrKeyword formula ':' lineend "an indentation increase" . $@1 input "an indentation decrease"

    $default  reduce using rule 11 ($@1)

    $@1  go to state 62


State 57

   34 commaformula: commaformula ',' . formula

    '-'             shift, and go to state 12
    "number"        shift, and go to state 13
    "element name"  shift, and go to state 4
    '('             shift, and go to state 16
    '!'             shift, and go to state 17

    varOrKeyword  go to state 23
    formula       go to state 63


State 58

   27 formula: formula '(' commaformula ')' .

    $default  reduce using rule 27 (formula)


State 59

   18 number: '-' "number" .

    $default  reduce using rule 18 (number)


State 60

   15 numlist: numlist ',' . number

    '-'       shift, and go to state 52
    "number"  shift, and go to state 53

    number  go to state 64


State 61

   32 formula: formula '[' numlist ']' .

    $default  reduce using rule 32 (formula)


State 62

   12 block: varOrKeyword formula ':' lineend "an indentation increase" $@1 . input "an indentation decrease"

    $default  reduce using rule 1 (input)

    input  go to state 65


State 63

   24 formula: formula . varOrKeyword
   25        | formula . "number"
   26        | formula . '(' ')'
   27        | formula . '(' commaformula ')'
   28        | formula . mathThing
   29        | formula . '&' '&'
   30        | formula . "=="
   31        | formula . '|' '|'
   32        | formula . '[' numlist ']'
   34 commaformula: commaformula ',' formula .

    '&'             shift, and go to state 27
    '|'             shift, and go to state 28
    '-'             shift, and go to state 29
    '+'             shift, and go to state 30
    '*'             shift, and go to state 31
    '/'             shift, and go to state 32
    '%'             shift, and go to state 33
    '^'             shift, and go to state 34
    "number"        shift, and go to state 35
    "element name"  shift, and go to state 4
    "=="            shift, and go to state 36
    '('             shift, and go to state 38
    '!'             shift, and go to state 39
    '['             shift, and go to state 40
    '>'             shift, and go to state 41
    '<'             shift, and go to state 42

    $default  reduce using rule 34 (commaformula)

    varOrKeyword  go to state 43
    mathThing     go to state 44


State 64

   15 numlist: numlist ',' number .

    $default  reduce using rule 15 (numlist)


State 65

    2 input: input . equals lineend
    3      | input . block
    4      | input . name lineend
    5      | input . lineend
    6      | input . error
    7      | input . "an error"
   12 block: varOrKeyword formula ':' lineend "an indentation increase" $@1 input . "an indentation decrease"

    error                      shift, and go to state 3
    "element name"             shift, and go to state 4
    "an error"                 shift, and go to state 5
    "an indentation decrease"  shift, and go to state 66
    '\n'                       shift, and go to state 6

    varOrKeyword  go to state 7
    equals        go to state 8
    block         go to state 9
    name          go to state 10
    lineend       go to state 11


State 66

   12 block: varOrKeyword formula ':' lineend "an indentation increase" $@1 input "an indentation decrease" .

    $default  reduce using rule 12 (block)
